membrane/tests/ui/stream.stderr
error: expected `impl Stream<Item = Result>`
  --> tests/ui/stream.rs:17:30
   |
17 | pub fn one_failure() -> impl Stream<i32, String> {}
   |                              ^^^^^^

error: expected enum `Result`
  --> tests/ui/stream.rs:20:44
   |
20 | pub fn two_failure() -> impl Stream<Item = i32, String> {}
   |                                            ^^^

error: expected a struct or scalar type
  --> tests/ui/stream.rs:23:53
   |
23 | pub fn three_failure() -> impl Stream<Item = Result<Option<i32>, String>> {}
   |                                                     ^^^^^^
